[package]
name = "starcoin-abi-decoder"
version = "1.8.0-rc.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_bytes = "0.11"
anyhow = "1.0.41"
once_cell = "1.8.0"
hex = "0.4.3"
move-binary-format = {git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53"  }
starcoin-resource-viewer = {path = "../../vm/resource-viewer"}
starcoin-vm-types = { path = "../../vm/types" }
starcoin-abi-types = {path = "../types"}
starcoin-abi-resolver = {path = "../resolver"}
bcs-ext = {path = "../../commons/bcs_ext"}
bcs = "0.1"
schemars = {git = "https://github.com/starcoinorg/schemars", rev="6a5f968a0c3910ea256f016709b782a654d3a1b7"}
