[package]
name = "starcoin-service-registry"
version = "1.8.0-rc.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"


[dependencies]
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
actix = "0.10.0"
actix-rt = "1.1"
futures = "0.3.12"
futures-timer = "3.0"
serde = { version = "1.0.130", features = ["derive"] }
once_cell = "1.8.0"
log = "0.4.14"
schemars = {git = "https://github.com/starcoinorg/schemars", rev="6a5f968a0c3910ea256f016709b782a654d3a1b7"}

[dev-dependencies]
stest = { path = "../../commons/stest" }
async-std = "1.10"
