[package]
name = "stream-task"
version = "1.8.0-rc.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
thiserror = "1.0"
pin-utils = "0.1.0"
async-std = "1.10"
futures = "0.3.12"
futures-timer = "3.0"
futures-retry = "0.5.0"
pin-project = "0.4.8"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
parking_lot = "0.11.2"
schemars = {git = "https://github.com/starcoinorg/schemars", rev="6a5f968a0c3910ea256f016709b782a654d3a1b7"}

[dev-dependencies]
stest = { path = "../stest" }
starcoin-logger = { path = "../logger"}
