[package]
name = "network-p2p-types"
version = "1.8.0-rc.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bitflags = "1.3.2"
bytes = "1"
derive_more = "0.99.14"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version="1.0", features = ["arbitrary_precision"]}
libp2p = { version = "0.40.0", default-features = false, features = ["request-response"] }
sc-peerset = { path = "../peerset"}
schemars = {git = "https://github.com/starcoinorg/schemars", rev="6a5f968a0c3910ea256f016709b782a654d3a1b7"}
[features]
default = []

