[package]
name = "starcoin-txpool-api"
version = "1.8.0-rc.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1"
futures-channel = "0.3"
starcoin-types = {path = "../../types", package="starcoin-types"}
starcoin-crypto = { package="starcoin-crypto", path = "../../commons/crypto"}
serde = { version = "1.0.130", default-features = false }
schemars = {git = "https://github.com/starcoinorg/schemars", rev="6a5f968a0c3910ea256f016709b782a654d3a1b7"}
