[package]
name = "starcoin-move-explain"
version = "1.8.0-rc.1"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem Move abort code explanations"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
structopt = "0.3.25"
stdlib = { package="stdlib", path = "../stdlib"}
move-core-types = { git = "https://github.com/starcoinorg/diem", rev = "e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
bcs-ext = { package="bcs-ext", path = "../../commons/bcs_ext" }

[features]
default = []
