[package]
name = "starcoin-natives"
version = "1.8.0-rc.1"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errmapgen = { git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
docgen = { git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
move-command-line-common = { git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
move-prover = { git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
move-vm-types = { git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
move-vm-runtime = { git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
move-binary-format = { git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
move-core-types = { git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53" }
starcoin-crypto={path = "../../commons/crypto"}
log = "0.4.14"
walkdir = "2.3.1"
smallvec = "1.7.0"
tiny-keccak={version="2", features = ["keccak"]}

[features]
testing=[]
