[package]
name = "starcoin-resource-viewer"
version = "1.8.0-rc.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
starcoin-vm-types = { path = "../types" }
move-binary-format = {git = "https://github.com/starcoinorg/diem", rev="e0a2b0edcdd59c214f3432dd83c8947e5ec73a53"  }
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive", "rc"] }
anyhow = "1.0.41"
once_cell = "1.8.0"
hex = "0.4.3"
