[package]
name = "vm-status-translator"
version = "1.8.0-rc.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "~1"
anyhow = "~1"
starcoin-vm-types = {path = "../types"}
starcoin-move-explain = {path = "../move-explain"}
schemars = {git = "https://github.com/starcoinorg/schemars", rev="6a5f968a0c3910ea256f016709b782a654d3a1b7"}
